--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+async-trait = "0.1.83"
 config = "0.14.0"
 google-youtube3 = "5.0.5"
 hyper = { version = "^0.14", features = ["client", "http1"] }
