--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 async-trait = "0.1.83"
 config = "0.14.0"
 google-youtube3 = "5.0.5"
+html-escape = "0.2.13"
 hyper = { version = "^0.14", features = ["client", "http1"] }
 hyper-rustls = "0.27.3"
 poise = "0.6.1"
